Bug 190579 - Preview mode for folders (with thumbnailing) doesn't display the fact that it is a symlink folder
Summary: Preview mode for folders (with thumbnailing) doesn't display the fact that it...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 169975 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-25 02:00 UTC by Shaun Reich
Modified: 2011-06-21 14:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shaun Reich 2009-04-25 02:00:12 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I have a folder that is named "Pictures", which houses about 2,000 of my pictures. I then have created a link (symlink) to that folder, in another directory. In preview mode, when I look at the symlink, it does not reveal the fact that it is actually a link. 

You know, that little arrow, "shortcut-like" icon at the bottom-left of the files/folders.

So I am led to believe that this is the actual folder, only to find out that it is just a link to one. So I could delete that link, and unknowingly, my folder would still reside somewhere in the filesystem, just because I was unaware of the fact that it *was* a link.

Whatever generates the previews does this, because it is only in preview mode, and it occurs in tooltips also.
Comment 1 FiNeX 2009-04-25 16:40:13 UTC
I'd like it too.
Comment 2 Tanja Schulte 2009-06-06 14:29:43 UTC
The name of the link is displayed in italic so you can tell it's a symlink - but nonetheless I'd also prefer an additional link arrow like all other linked files/folders have. Because of consistency and because the information sidebar doesn't reveal that the linked folder is a link.
Comment 3 Jaime Torres 2011-06-12 09:55:07 UTC
*** Bug 169975 has been marked as a duplicate of this bug. ***
Comment 4 Matthias Fuchs 2011-06-21 14:49:14 UTC
Git commit 034324e01cdb20c7ec7d236ab13be8bd3273acea by Matthias Fuchs.
Committed on 10/06/2011 at 21:33.
Pushed by mfuchs into branch 'master'.

Draw overlays even for previews.

BUG:190579
REVIEW:101570

M  +2    -0    kfile/kfilepreviewgenerator.cpp     

http://commits.kde.org/kdelibs/034324e01cdb20c7ec7d236ab13be8bd3273acea
Comment 5 Matthias Fuchs 2011-06-21 14:57:53 UTC
Git commit 6b5271fa5fa585b6cf35b4c46376fa64aac5e06d by Matthias Fuchs.
Committed on 10/06/2011 at 21:49.
Pushed by mfuchs into branch 'master'.

Show icon overlays in the Informationen Panel.

BUG:190579
REVIEW:101573

M  +5    -3    dolphin/src/panels/information/informationpanelcontent.cpp     

http://commits.kde.org/kde-baseapps/6b5271fa5fa585b6cf35b4c46376fa64aac5e06d