Draw overlays even for previews.

BUG:190579
REVIEW:101570